# Deep-Sudoku

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
ai_model/: fdeep_model.json  keras_model.h5
ai_model/num_reader_2828.model/: keras_metadata.pb  saved_model.pb
ai_model/num_reader_2828.model/variables/: variables.index
android/: AndroidManifest.xml
cmake/: android-opencv-settings.cmake  android-tensorflow-lite-settings.cmake  desktop-opencv-settings.cmake  desktop-tensorflow-lite-settings.cmake  external-build.cmake  frugally-deep-build.cmake  frugally-deep-dependencies.cmake  tensorflow-dep.cmake
docs/: AndroidQtDeploy.md  Doxyfile  doxygen-awesome-darkmode-toggle.js  doxygen-awesome-sidebar-only.css  doxygen-awesome.css  header.html  index.html
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_000006_000003.html  dir_0970364fefdb8a23f3954a35eeb8eb70.html  dir_0970364fefdb8a23f3954a35eeb8eb70.js  dir_0970364fefdb8a23f3954a35eeb8eb70_dep.map  dir_0970364fefdb8a23f3954a35eeb8eb70_dep.md5  dir_1d81f7f4362e4398c0a695c4e466fcb0.html  dir_1d81f7f4362e4398c0a695c4e466fcb0.js  dir_1d81f7f4362e4398c0a695c4e466fcb0_dep.map  dir_1d81f7f4362e4398c0a695c4e466fcb0_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_a9c3430cc90ee11b7e488870a2165a07.html  dir_a9c3430cc90ee11b7e488870a2165a07.js  dir_a9c3430cc90ee11b7e488870a2165a07_dep.map  dir_a9c3430cc90ee11b7e488870a2165a07_dep.md5  dir_b1e867625e87c93941dbbf6a55a248f7.html  dir_b1e867625e87c93941dbbf6a55a248f7.js  dir_b1e867625e87c93941dbbf6a55a248f7_dep.map  dir_b1e867625e87c93941dbbf6a55a248f7_dep.md5  dir_b2bc7330d6329d373f3a4f43f7beac3d.html  dir_b2bc7330d6329d373f3a4f43f7beac3d.js  dir_b2bc7330d6329d373f3a4f43f7beac3d_dep.map  dir_b2bc7330d6329d373f3a4f43f7beac3d_dep.md5  dir_ddb4d7e95cc2d6c8e1ade10a20d7247d.html  dir_ddb4d7e95cc2d6c8e1ade10a20d7247d.js  dir_ddb4d7e95cc2d6c8e1ade10a20d7247d_dep.map  dir_ddb4d7e95cc2d6c8e1ade10a20d7247d_dep.md5  files.html  functions.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  (+77 more)
docs/html/d0/d09/: classmain__hot__reload__inherit__graph.map  classmain__hot__reload__inherit__graph.md5
docs/html/d0/d53/: classDSButton.html  classDSButton.js
docs/html/d0/d6c/: namespacedsdk.html  namespacedsdk.js
docs/html/d0/d75/: DSButton_8qml.html
docs/html/d0/d7d/: enhanced__engine_8cpp__incl.map  enhanced__engine_8cpp__incl.md5
docs/html/d0/dc6/: classdsdk_1_1CVHoughFinder__coll__graph.map  classdsdk_1_1CVHoughFinder__coll__graph.md5
docs/html/d0/dc8/: classImagePainter.html
docs/html/d1/d06/: classNumberInput-members.html
docs/html/d1/d17/: structdsdk_1_1CVSegmentation_1_1DetectionSize__coll__graph.map  structdsdk_1_1CVSegmentation_1_1DetectionSize__coll__graph.md5
docs/html/d1/d1c/: Board_8qml.html
docs/html/d1/d37/: media__capture_8cpp.html
docs/html/d1/d56/: deep__solver_8hpp__dep__incl.map  deep__solver_8hpp__dep__incl.md5
docs/html/d1/d7b/: cv__hough__finder_8hpp.html  cv__hough__finder_8hpp_source.html
docs/html/d1/d7e/: deep__solver_8hpp.html  deep__solver_8hpp_source.html
docs/html/d1/d84/: ReloadWindow_8qml.html
docs/html/d1/d96/: classMainWindow__inherit__graph.map
docs/html/d1/da7/: image__painter_8hpp__incl.map  image__painter_8hpp__incl.md5
docs/html/d1/dae/: cv__hough__finder_8hpp__incl.map  cv__hough__finder_8hpp__incl.md5
docs/html/d1/dc3/: CenterFlow_8qml.html
docs/html/d1/dc7/: classBackground.html  classBackground.js
docs/html/d1/de6/: classGlobals__inherit__graph.map
docs/html/d2/d26/: classNumberInput.html  classNumberInput.js
docs/html/d2/d38/: classMainWindow__coll__graph.md5
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+72 more)
scripts/: build_android.sh  deploy_android.sh
src/: CMakeLists.txt  app.cpp  app.hpp  board_model.cpp  board_model.hpp  camera_helper.cpp  camera_helper.hpp  cell_data.cpp  cell_data.hpp  cv_hough_finder.cpp  cv_hough_finder.hpp  cv_img_mat.cpp  cv_img_mat.hpp  cv_segmentation.cpp  cv_segmentation.hpp  deep_solver.cpp  deep_solver.hpp  enhanced_engine.cpp  enhanced_engine.hpp  game_control_proxy.cpp  game_control_proxy.hpp  main.cpp  media_capture.cpp  media_capture.hpp  qcv_algorithm.cpp  qcv_algorithm.hpp  qcvimageprocessor.cpp  qcvimageprocessor.hpp
src/img_proc/: cv_hough_finder.cpp  cv_hough_finder.hpp  cv_img_mat.cpp  cv_img_mat.hpp  cv_segmentation.cpp  cv_segmentation.hpp  deep_solver.cpp  deep_solver.hpp
src/lib/frugally-deep/: CMakeLists.txt
src/lib/frugally-deep/cmake/: HunterGate.cmake
src/lib/frugally-deep/include/fdeep/: model.hpp
src/modules/: CMakeLists.txt  ImagePainter.qml  image_painter.hpp
src/modules/ImagePainter/: CMakeLists.txt  ImagePainter.qml  image_painter.cpp  image_painter.hpp
src/qml/: Background.qml  Board.qml  Board_old.qml  CameraView.qml  DSButton.qml  Field.qml  FixedGrid.qml  IconButton.qml  MainWindow.qml  NumberInput.qml  PhotoCaptureControls.qml  PhotoPreview.qml  ReloadWindow.qml  StartScreen.qml  SudokuGame.qml  __main.qml  debug.js  main.qml  main_hot_reload.qml  qml.qrc  reload_window.qml
src/qml/custom/: CenterFlow.qml  DSButton.qml  IconButton.qml  custom.qrc
src/qml/global/: Globals.qml
src/qml/images/: images.qrc
src/ref/: board_model.cpp  board_model.hpp  cell_data.cpp  cell_data.hpp  utils.cpp  utils.hpp
test/: BM_opencv.cpp  CMakeLists.txt  test_custom_hough.cpp  test_opencv.cpp  test_predictTensor.cpp  test_predict_tensor.cpp  test_solver.cpp
(+285 files in other folders)
